# qna-data-dashboard

./: .env.example  .gitignore  .ruff.toml  AGENTS.md  README.md  pyproject.toml  requirements.txt  speckit.constitution
.codex/: auth.json  config.toml  history.jsonl  version.json
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
app/: __init__.py  main.py
app/api/: __init__.py  group_preferences.py  ingest_sources.py  router.py
app/db/: metadata.py  schema.py
app/embeddings/: __init__.py  service.py
app/ingest/: __init__.py  bulk_actions.py  reembed_panel.py  status_sync.py  unified_list.py
app/models/: __init__.py  source.py
app/pages/: 1_ingest.py  2_search.py  3_analytics.py  4_query_builder.py
app/services/: __init__.py  analytics.py  audit_log.py  chroma_client.py  embedding_queue.py  embeddings.py  ingest_models.py  ingest_storage.py  ingestion.py  legacy_reconcile.py  preferences.py  query_builder.py  refresh_utils.py  search.py  source_repository.py  source_service.py
app/utils/: __init__.py  audit.py  caching.py  config.py  constants.py  logging.py  metrics.py  session_state.py  source_uuid.py
data/: README.md
docs/: TECHNICAL_NOTES.md  ingest.md
docs/operations/: sheet-sources.md
docs/performance/: 001-add-query-analytics.md  002-sheet-sources.md  search-service-evaluation.md
specs/001-add-query-analytics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-add-query-embeddings/: spec.md
specs/002-separate-sheet-sources/: plan.md  (+5 more)
tests/: __init__.py  conftest.py
(+127 files in other folders)
